--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,9 +18,16 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.18.0/ckeditor.js" integrity="sha512-woYV6V3QV/oH8txWu19WqPPEtGu+dXM87N9YXP6ocsbCAH1Au9WDZ15cnk62n6/tVOmOo0rIYwx05raKdA4qyQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     
     <script>
         M.Sidenav.init (document.querySelector('.sidenav'))
+        M.FormSelect.init(document.querySelector('#status'))
+    
+    CKEDITOR.replace('body', {
+        Plugin: 'wysiwygarea, toolbar, basicstyle, link'
+    })
+    
     </script>
 </body>
 </html>
